[gd_scene load_steps=4 format=3 uid="uid://ng27ba3o2qm"]

[ext_resource type="Texture2D" uid="uid://b388c5l6temn6" path="res://media/UI/turn_arrow.png" id="1_5mn77"]
[ext_resource type="Script" path="res://tile_ui.gd" id="1_kdsxw"]
[ext_resource type="Texture2D" uid="uid://e84j306wqhjv" path="res://media/UI/done.png" id="2_xf5xj"]

[node name="TileUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = -96.0
offset_top = -112.0
offset_right = 96.0
offset_bottom = -72.0
script = ExtResource("1_kdsxw")

[node name="TurnLeft" type="TextureButton" parent="."]
offset_right = 100.0
offset_bottom = 100.0
scale = Vector2(0.490872, 0.483884)
texture_normal = ExtResource("1_5mn77")

[node name="TurnRight" type="TextureButton" parent="."]
offset_left = 144.0
offset_right = 244.0
offset_bottom = 100.0
scale = Vector2(0.490872, 0.483884)
texture_normal = ExtResource("1_5mn77")
flip_h = true

[node name="Done" type="TextureButton" parent="."]
offset_left = 72.0
offset_top = -16.0
offset_right = 172.0
offset_bottom = 84.0
scale = Vector2(0.459091, 0.455885)
texture_normal = ExtResource("2_xf5xj")

[connection signal="pressed" from="TurnLeft" to="." method="_on_turn_left_pressed"]
[connection signal="pressed" from="TurnRight" to="." method="_on_turn_right_pressed"]
[connection signal="pressed" from="Done" to="." method="_on_done_pressed"]
